# legged_robot_stack

./: README.md
hexapod_body_kinematics/: CMakeLists.txt  package.xml
hexapod_body_kinematics/include/hexapod_body_kinematics/: body_kinematics.hpp  interactive_marker.hpp
hexapod_body_kinematics/scripts/: body_kinematics_teleop.py  joint_pid_tuner.py
hexapod_body_kinematics/src/: body_kinematics.cpp  interactive_marker.cpp
hexapod_core/: CMakeLists.txt  package.xml
hexapod_core/launch/: main.launch  main.launch.py
hexapod_core/src/hexapod_core/: joint_state_to_trajectory.py  leg_kinematics.py  velocity_control.py
hexapod_gait_kinematics/: CMakeLists.txt  package.xml
hexapod_gait_kinematics/include/hexapod_gait_kinematics/: gait.hpp  gait_kinematics.hpp  teleop_joy.hpp
hexapod_gait_kinematics/src/: gait.cpp  gait_kinematics.cpp  teleop_joy.cpp
hexapod_kinematics/: CMakeLists.txt  package.xml
hexapod_kinematics/include/hexapod_kinematics/: leg_ik_service.hpp
hexapod_kinematics/launch/: leg_ik_service.launch  leg_ik_service.launch.py
hexapod_kinematics/scripts/: intractive_marker.py
hexapod_kinematics/src/: joint_publisher.cpp  leg_ik_service.cpp  leg_kinematics.cpp
hexapod_msgs/: CMakeLists.txt  package.xml
hexapod_msgs/msg/: LegJointsState.msg
hexapod_msgs/srv/: GetLegsIKSolver.srv  SetJointPID.srv
hexapod_teleop/: CMakeLists.txt  package.xml
hexapod_teleop/include/hexapod_teleop/: teleop_twist.hpp
hexapod_teleop/launch/: teleop.launch.py
hexapod_teleop/src/: teleop_twist.cpp
leg_description/: CMakeLists.txt  package.xml
leg_description/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch  urdf.rviz
leg_description/meshes/: Femur_Base.stl  Leg_Base_Frame.stl  body_base_link.stl  femur_base_1.stl  femur_link_1.stl  leg_base_link.stl  tibia_assembly_v2.stl  tibia_link_1.stl
leg_description/physics_properties/: femur_physical_properties.txt  tibia_physical_properties.txt
leg_description/urdf/: body.xacro  leg.gazebo  leg.xacro  materials.xacro
leg_description/world/: outdoor.world  physics_bullet.world
