<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_body_kinematics</name>
  <version>0.0.0</version>
  <description>The hexapod_body_kinematics package</description>

  <maintainer email="chirag@todo.todo">chirag</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>std_msgs</depend>
  <depend>hexapod_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
